# mosquittauri

./: .gitignore  .prettierignore  .taurignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
src-tauri/: .db_url_env  .gitignore  Cargo.toml  build.rs  fix-author.sh  tauri.conf.json
src-tauri/.sqlx/: query-09108b332205d8e29372dc5bf63da0b266fe92d3a48654ea14064bbc58bffc77.json  query-1e84b6b03eff12e2ff2e87eb02f0010f6cf02da66962d7e6588846ad0afd9792.json  query-23027f47040fd44310838b5999d7be2fe51d0f1813c98fa514a3359038e5c4b3.json  query-307aa9424ac569a1e0d5c318c330176fd32728755120603edf8014c155083da2.json  query-39fb5b7d468c7f33f760a485171265d3d755925777cbcc0359a4c2d8b525506c.json  query-3b97e9821d02683c73f344dea663e0947d4500831531dc1b3607f9558879589d.json  query-3c044cfc4967161a7e8aa575fe3498b53cd9b713a269ba559bdea7dd298926ba.json  query-3da8438b0dd5f3f188299f5de01ff0ad718cc7d20b4245ad5859f6a88a7a25d9.json  query-415a2ba5b3f0f761b78c6df56532f1edd634dc67b5d4b59937e71265389a536c.json  query-43adbfa197e6b7c17bb61ffedbd1e4008a1edff8ae58e7fc695b115ad73dfb73.json  query-4e38d760475776500d981ed1e14de283337a43cf0c9e5961b24256f5f3bb316e.json  query-613e15ac105fb99684f16060c7b1502ba3016d7fae8ed03630db0fc595ceea5f.json  query-7a6b8ae660a127958d45448ca8ead0caf8e3902192b89d90d02c3d9d647e710a.json  query-7ce697056699485640d8b1b4ece88e1f697504d5e3eb15672eadfba3f01436a4.json  query-99349730f53391004ac910e3370f2e05195f53048dc4419375eb34da6116c0e1.json  query-9e790bbd653640dbf9875b2209301cab5b2ad640337ec579e90f2c36e98e9d95.json  (+10 more)
src-tauri/icons/: icon.icns
(+71 files in other folders)
