[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.13.5"
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.1", features = ["test"] }
tauri-plugin-log = "2.4.0"
rumqttc = { version = "0.24.0", default-features = false, features = [
  "url",
  "use-native-tls",
  "proxy",
  "websocket",
] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
prost = { version = "0.13.5", features = ["derive"] }
prost-types = "0.13.5"
tokio = "1.45.1"

[dev-dependencies]
ntest = "0.9.3"
test-context = "0.4.1"
